// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfileHead Correctly displays that we are mutually subscribed 1`] = `
<DocumentFragment>
  <div
    class="profile"
    role="region"
  >
    <div
      class="avatar"
    >
      <a
        class="picture pictureLarge"
      >
        <img
          alt="Profile picture of freefeed"
          height="75"
          src="profilePictureUrl"
          width="75"
        />
      </a>
    </div>
    <div
      class="info"
    >
      <div
        class="screenName"
      >
        Shoop da whoop
      </div>
      <div
        class="username"
      >
        <span
          class="infoIcon"
          style="text-align: right;"
        >
          @
        </span>
        freefeed
      </div>
      <div>
        <span
          class="infoStatusSpan"
        >
          <span
            class="infoIcon"
          >
            <svg
              class="fa-icon fa-icon-fas-globe-americas"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="#fa-icon-fas-globe-americas"
              />
            </svg>
          </span>
          Public feed
        </span>
        <span
          class="infoStatusSpan"
        >
          <span
            class="infoIcon"
          >
            <svg
              aria-hidden="true"
              class="fa-icon fa-icon-fas-check-circle"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                fill="currentColor"
              />
            </svg>
          </span>
          Mutually subscribed
        </span>
      </div>
    </div>
    <div
      class="description"
    >
      <span
        class="Linkify"
        dir="auto"
        role="region"
      >
        IMMA CHARGIN MAH LAZER
      </span>
    </div>
    <div
      class="lists"
    >
      Loading lists...
    </div>
    <div
      class="actions"
    >
      <ul
        class="actionsList"
      >
        <li>
          <a
            aria-disabled="false"
            role="button"
            tabindex="0"
          >
            Unsubscribe
          </a>
        </li>
        <li>
          <a>
            Direct message
          </a>
        </li>
      </ul>
      <ul
        class="actionsList actionsListRight"
      >
        <li>
          <a
            aria-disabled="false"
            role="button"
            tabindex="0"
          >
            Hide in Home
          </a>
        </li>
      </ul>
    </div>
    <div
      class="errorsList"
    />
    <div
      class="stats"
    >
      <ul
        class="statsItems"
      >
        <li
          class="statlink"
        >
          <a
            class="statlinkText"
          >
            2 subscriptions
          </a>
        </li>
        <li
          class="statlink"
        >
          <a
            class="statlinkText"
          >
            1 subscriber
          </a>
        </li>
        <li
          class="statlink allPosts"
        >
          <a
            class="statlinkText"
          >
            All posts
          </a>
        </li>
        <li
          class="statlink"
        >
          <a
            class="statlinkText"
          >
            5 comments
          </a>
        </li>
        <li
          class="statlink"
        >
          <a
            class="statlinkText"
          >
            4 likes
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserProfileHead Renders an error message if user is not found 1`] = `
<DocumentFragment>
  <div
    class="profile"
    role="region"
  >
    <div
      class="avatar"
    >
      <div
        class="picture pictureLarge pictureEmpty"
      >
        +_+
      </div>
    </div>
    <div
      class="text-danger"
    >
      User 
      <strong>
        freefeed
      </strong>
       is not found on FreeFeed
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserProfileHead Renders my own header and doesn't blow up 1`] = `
<DocumentFragment>
  <div
    class="profile"
    role="region"
  >
    <div
      class="avatar"
    >
      <a
        class="picture pictureLarge"
      >
        <img
          alt="Profile picture of freefeed"
          height="75"
          src="profilePictureUrl"
          width="75"
        />
      </a>
    </div>
    <div
      class="info"
    >
      <div
        class="screenName"
      >
        Shoop da whoop
      </div>
      <div
        class="username"
      >
        <span
          class="infoIcon"
          style="text-align: right;"
        >
          @
        </span>
        freefeed
      </div>
      <div>
        <span
          class="infoStatusSpan"
        >
          <span
            class="infoIcon"
          >
            <svg
              class="fa-icon fa-icon-fas-globe-americas"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                xlink:href="#fa-icon-fas-globe-americas"
              />
            </svg>
          </span>
          Public feed
        </span>
        <span
          class="infoStatusSpan"
        >
          <span
            class="infoIcon"
          >
            <svg
              aria-hidden="true"
              class="fa-icon fa-icon-far-smile"
              focusable="false"
              role="img"
              viewBox="0 0 496 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 448c-110.3 0-200-89.7-200-200S137.7 56 248 56s200 89.7 200 200-89.7 200-200 200zm-80-216c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm4 72.6c-20.8 25-51.5 39.4-84 39.4s-63.2-14.3-84-39.4c-8.5-10.2-23.7-11.5-33.8-3.1-10.2 8.5-11.5 23.6-3.1 33.8 30 36 74.1 56.6 120.9 56.6s90.9-20.6 120.9-56.6c8.5-10.2 7.1-25.3-3.1-33.8-10.1-8.4-25.3-7.1-33.8 3.1z"
                fill="currentColor"
              />
            </svg>
          </span>
          It’s you!
        </span>
      </div>
    </div>
    <div
      class="description"
    >
      <span
        class="Linkify"
        dir="auto"
        role="region"
      >
        IMMA CHARGIN MAH LAZER
      </span>
    </div>
    <div
      class="stats"
    >
      <ul
        class="statsItems"
      >
        <li
          class="statlink"
        >
          <a
            class="statlinkText"
          >
            2 subscriptions
          </a>
        </li>
        <li
          class="statlink"
        >
          <a
            class="statlinkText"
          >
            1 subscriber
          </a>
        </li>
        <li
          class="statlink allPosts"
        >
          <a
            class="statlinkText"
          >
            All posts
          </a>
        </li>
        <li
          class="statlink"
        >
          <a
            class="statlinkText"
          >
            5 comments
          </a>
        </li>
        <li
          class="statlink"
        >
          <a
            class="statlinkText"
          >
            4 likes
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UserProfileHead Renders nothing if user is not loaded yet 1`] = `
<DocumentFragment>
  <div
    class="profile"
    role="region"
  >
    <div
      class="avatar"
    >
      <div
        class="picture pictureLarge pictureEmpty"
      >
        ...
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;
